--- a/estilos/style.css
+++ b/estilos/style.css
@@ -18,6 +18,14 @@
     text-decoration: none;
 }
 
+#apresentação > video {
+    z-index: -1000;
+    position: absolute;
+    width: 100%;
+    height: 100vh;
+    object-fit: cover;
+}
+
 body{
     background-color: #030328;
     font-family: "Gilroy Light";
